Fix bugs being cut off on large viewports

--- a/components/Home/Home.module.scss
+++ b/components/Home/Home.module.scss
@@ -34,7 +34,9 @@
 }
 
 .heroVideoWrapper {
-  overflow: hidden;
+  @media screen and (max-width: 1200px) {
+    overflow: hidden;
+  }
 }
 
 .heroBugLeft {
